--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Sedona",
   "private": true,
   "devDependencies": {
+    "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
